# moodrop-project

./: .gitignore  BaseStorage.c  BaseStorage.h  CMakeLists.txt  Jenkinsfile  Makefile  README.MD  README.html  README.md  app.py  base_storage.txt  database.c  database.h  docker-compose.yml  led.c  led.h  log.c  log.h  main.c  mqtt.c  mqtt.h  perfume_device  pyproject.toml  requirements.txt  servo.c  servo.h  servo_sync.c  shared_globals.h  test  valve.c  valve.h  weather.py
3D_modeling/gearbox/: 10ml_guide.stl  MG996R_guide_plate.stl  MG996R_guide_valve.stl  cock_combine.stl  cock_connector.stl  cock_fixer.stl  cock_holder.stl  cock_servo.stl  gear_cock_combine_ver2.stl  gear_cock_combine_ver3.stl  servo_gear_plate.stl  servo_gear_valve.stl  servo_gear_valve_ver2.stl  servo_gear_valve_ver3.stl  servo_gear_valve_ver4.stl
3D_modeling/plate/: 10ml_female.stl  10ml_male.stl  30ml_female.stl  30ml_male.stl  30mlx5_female.stl  30mlx5_male.stl  plate_female.stl  plate_male.stl
IoTserver/: app.py
IoTserver/templates/: index.html
Moodrop/: .env.example  .gitignore  README.md  app.json  eas.json  package-lock.json  package.json
Moodrop/.backup/: recipe-with-save-feature.tsx
Moodrop/app/: _layout.tsx  (+1 more)
Sub_1/: app.py  test.py
docs/: note_category.txt  perfume_count_by_note.csv
include/: led.h  log.h  servo.h  servo_sync.h  storage.h  valve.h
spring-app/: Dockerfile  alter-table-rating-count.sql  moodrop.sql  pom.xml
src/: led.c  log.c  mqtt.c  servo.c  servo_sync.c  storage.c  valve.c
static/: styles.css
templates/: index.html
test/: main.c
web/: app.py
(+143 files in other folders)
